--- a/static/html/index.html
+++ b/static/html/index.html
@@ -4,10 +4,35 @@
   <head>
     <meta charset="UTF-8" />
     <title>ISLA - Fashion second hand marketplace price extractor</title>
+    <link rel="stylesheet" href="/css/index_style.css">
   </head>
 
   <body>
     <h1>Welcome on the ISLA's Fashion second hand price exctractor</h1>
+    <br>
+    <h2>Fill in the piece's name or brands you want to know the prices on second-hand marketplaces</h2>
+    <h3>To have relevant results, please respect this synthax: "Dior handbags", "Balmain dresses" ...</h3>
+
+    <form id="mp_prices_form" action="/results" method="post">
+      <label for="queryInput">Clothes and / or brands to search for: </label>
+      <input type="text" id="queryInput" name="queryInput" required minlength="3" maxlength="80" size="80em"><br><br>
+      <label>Marketplaces to search on: </label><br><br>
+      <input type="checkbox" id="VC_Checkbox" name="VC_Checkbox" checked disabled>
+      <label for="VC_Checkbox">Vestiaire Collective</label><br>
+      <input type="checkbox" id="Vinted_Checkbox" name="Vinted_Checkbox" checked disabled>
+      <label for="Vinted_Checkbox">Vinted</label><br>
+      <input type="checkbox" id="Depop_Checkbox" name="Depop_Checkbox" disabled>
+      <label for="Depop_Checkbox">Depop</label><br>
+      <input type="checkbox" id="Videdressing_Checkbox" name="Videdressing_Checkbox" disabled>
+      <label for="Videdressing_Checkbox">Videdressing</label><br>
+      <input type="checkbox" id="Rebelle_Checkbox" name="Rebelle_Checkbox" disabled>
+      <label for="Rebelle_Checkbox">Rebelle</label><br>
+      <input type="checkbox" id="TLC_Checkbox" name="TLC_Checkbox" disabled>
+      <label for="TLC_Checkbox">The Luxury Closet</label><br><br>
+
+      <input type="submit" value="Get prices!">
+
+    </form>
 
     <script type="application/javascript" src="js/app.js"></script>
   </body>
